26.04.2024
- poprawiony odczyt adresu dla 'array of type = [ ]'

14.04.2024
- array of byte = [], tworzy tablice array [0..0]
- nowa dyrektywa {$eval par1[,par2] , "expression"}

06.04.2024
- przepisana obsługa typu SINGLE, bez udziału stosu programowego

04.04.2024
- nowy moduł PP (Power Packer decompressor)
- nowy zasób PP (Power Packer file), modyfikuje plik *.PP aby dekompresor mógł zadziałać

01.04.2024
- nowy przełącznik -cpu [6502, 65c02, 65816]

31.03.2024
- poprawki PCHAR, PSTRING

29.03.2024
- umożliwione przekazywanie znaku (CHARLITERLATOK) jako STRING do procedur/funkcji

19.03.2024
- {$f page} powoduje dodanie {$define fastmul}
- opt_TEMP_WHILE poprawione

12.03.2024
- poprawione LENGTH dla length(array_with_records[ ].string), length(char), length('literal')
- unit FASTMATH: FASTDIV, FASTDIVS
- rezerwacja pamięci dla IOCB@COPY tylko gdy etykieta @CmdLine jest zdefiniowana

09.03.2024
- [striped] dla tablic typu WORD, POINTER, CARDINAL, SMALLINT, INTEGER

05.03.2024
- poprawione @moveSTRING (base\strmove.asm)
- poprawione GetIdent (Pasrser.pas), nie faworyzuje modułu SYSTEM

04.03.2024
- naprawiona alokacja tablic z rekordami absolute
- naprawione przekazywanie CHAR gdy parametrem jest STRING

03.03.2024
- możliwość używania procedur/funkcji overload z LIBRARY

28.02.2024
- Bugfixes
- @buf dostępne z poziomu MP (__BUFFER)

24.02.2024
- optymalizacje fastmul, base\common\byte.asm, base\common\word.asm

20.02.2024
- function without assignment at end block, optimization fixed
- TestName, ExtractName fixed

19.02.2024
- Bugfixes
- uses
- extractname

16.02.2024
- dodana możliwość ustawienia adresu kompilacji z poziomu programu, np.:

  program name : address;
  library name : address;

15.02.2024
- issue #134 fixed (https://github.com/tebe6502/Mad-Pascal/issues/134)
- partialy added LIBRARY, EXTERNAL

09.02.2024
- issue #125 fixed again (Optimize.pas -> OptimizeProgram)

08.02.2024
- Bugfixes

04.02.2024
- bocianu dodał nowy target 'neo6502' (-t neo)
