@@ -1,5 +1,6 @@
 26.04.2024
 - poprawiony odczyt adresu dla 'array of type = [ ]'
+- inicjalizacja 'open array' przez string nie dubluje go w pamięci
 
 14.04.2024
 - array of byte = [], tworzy tablice array [0..0]
